Fix [Jobs] Results: best iteration badge overflows (#209)

--- a/src/components/Details/details.scss
+++ b/src/components/Details/details.scss
@@ -101,76 +101,6 @@
       }
     }
 
-    &_results {
-      position: relative;
-      width: 100%;
-
-      &__table {
-        position: relative;
-        width: 100%;
-        text-align: left;
-
-        &_row {
-          display: flex;
-          flex-direction: row;
-          border-bottom: $tableBorder;
-
-          &_cell {
-            display: flex;
-            flex: 1;
-            flex-direction: column;
-            width: 55px;
-            padding: 19px 16px;
-          }
-        }
-
-        &_header {
-          position: sticky;
-          top: 0;
-          z-index: 2;
-          background-color: $white;
-
-          &_item {
-            display: flex;
-            flex: 1;
-            flex-direction: column;
-            width: 55px;
-
-            @include tableHeader(16px);
-          }
-        }
-
-        i {
-          margin: 0 15px;
-        }
-
-        &_medal {
-          position: relative;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-
-          img {
-            margin-left: 10px;
-          }
-
-          svg {
-            position: absolute;
-            top: 15px;
-            left: -10px;
-          }
-        }
-
-        tbody {
-          tr {
-            &:hover {
-              background-color: $alabaster;
-            }
-          }
-        }
-      }
-    }
-
     &_logs {
       position: relative;
       width: 100%;
